--- a/images/templates/all-images.html
+++ b/images/templates/all-images.html
@@ -1,6 +1,11 @@
 {% extends 'base.html'%}
 
-{%block content%}
-
+{% block content %}
+{% for image in images %}
+    <img src="{{image.image.url}}" alt="Image">
+    <p>{{image.name}}</p>
+    {{image.description}}
+    <br>
+{%endfor%}
 <h1>welcome</h1>
 {%endblock%}
