--- a/images/templates/search.html
+++ b/images/templates/search.html
@@ -3,8 +3,8 @@
 <div class="container">
 
   <div class="row">
-    {% if image%}
-      <h2>Found {{ images|length }} of searched term {{message}}</h2>
+    {% if searched_images%}
+      <h2>Found {{ searched_images|length }} of searched term {{message}}</h2>
     {% else %}
       <h2> Found 0 images for the search term {{message}}</h2>
     {% endif %}
@@ -13,10 +13,14 @@
 
   <div class="row">
 
-  {% if images %}
-    {% for image in images %}
-      <div class="col-sm-6 col-md-3">
-          <h1>{{image.categories}}</h1>
+  {% if searched_images %}
+    {% for image in searched_images %}
+    <!-- <div class="col-sm-6 col-md-3"> -->
+    <h1>{{image.categories}}</h1>
+    <img src="{{image.image.url}}" alt="Image">
+    <p>{{image.name}}</p>
+    {{image.description}}
+    <br>
       </div>
     {% endfor %}
   {% endif %}
