--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,4 +1,13 @@
-h1
-{
-  color: rgb(164, 85, 201);
+h1{
+  color: rgb(216, 46, 250);
+}
+
+body{
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-image: url(https://cdn.shopify.com/s/files/1/0337/7469/products/sweet-pink-ombre-wallpaper-mural_1800x1800.jpg?v=1596397295);
+}
+nav{
+  background-color: #B33F62;
 }
