--- a/images/templates/all-images.html
+++ b/images/templates/all-images.html
@@ -1,23 +1,44 @@
-{% extends 'base.html'%}
-
+{% extends  'base.html'%}
 {% block content %}
-<h1>welcome</h1>
-<div class="container">
-
-
-{% for image in images %}
-<div class="row">
-<div class="col-xs-18 col-sm-6 col-md-3 ">
-    <div class="card-body">
-        <li class="jumbotron " style="padding-left:10px ; list-style-type: none; background-color: rgb(250, 41, 125);"> 
-    <img src="{{image.image.url}}"class="img-fluid img-thumbnail" alt="Image" style="width:500px;">
-    <strong><p>{{image.name}}</p></strong>
-  <!-- <b><p>{{image.description}}</p></b> -->
-    <br>
+<div class="container-fluid">
+        <h1>Welcome To My Gallery</h1>
+    </div>
 </div>
-</div>
-{%endfor%}
-</div>
+<div class="container-fluid">
+ <div class="card-columns">
+    {% for image in images %}
+    <div class="card" data-toggle="modal" data-target="#{{image.id}}">
+        <img src="{{image.image.url}}" alt="{{image.name}}" class="card-img" width="300px">
+        <h1>{{image.name}}</h1>
+        <p>{{image.desc}}</p>
+    </div>
+    <div class="modal fade " id="{{image.id}}" tabindex="-1" role="dialog"
+         aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-md" role="document">
+            <div class="modal-content modalcard">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="imageheader">{{image.name}}</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <img src="{{image.image.url}}" alt="{{image.name}}" class="img-fluid" width="400">
+                    <p class="imgdesc text-center">{{image.description}}</p>
+                    <span class="btn btn-sm btn-outline-success">{{image.categories}}</span> <a
+                        href="/location/{{image.location}}" class="btn btn-sm btn-outline-info">{{image.location}}</a>
+                </div>
+                <div class="modal-footer">
+                    <input class="form-control input-lg" type="text"
+                           value="{{image.image.url}}" id="{{image.id}}.url">
+                    <button class="btn btn-success btn-sm" onclick="copyLink('{{image.id}}.url')">Copy</button>
+                    <button type="button" class="btn btn-outline-danger btn-sm" data-dismiss="modal">Close
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+    {% endfor %}
+ </div>
 </div>
 {%endblock%}
-
