--- a/images/templates/all-images.html
+++ b/images/templates/all-images.html
@@ -1,16 +1,19 @@
 {% extends  'base.html'%}
 {% block content %}
 <div class="container-fluid">
-        <h1>Welcome To My Gallery</h1>
+        <u><h1><b>Welcome To My Gallery</b></h1></u>
     </div>
 </div>
-<div class="container-fluid">
+<div class="container-fluid"style ="overflow: hidden;">
  <div class="card-columns">
     {% for image in images %}
+    <div class="row">  
+        <div class="col-xs-18 col-sm-6 col-md-3 ">
     <div class="card" data-toggle="modal" data-target="#{{image.id}}">
+        
         <img src="{{image.image.url}}" alt="{{image.name}}" class="card-img" width="300px">
-        <h1>{{image.name}}</h1>
-        <p>{{image.desc}}</p>
+        <h1>Name:{{image.name}}</h1>
+        <p><b>Description:{{image.description}}</b></p>
     </div>
     <div class="modal fade " id="{{image.id}}" tabindex="-1" role="dialog"
          aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
@@ -28,6 +31,7 @@
                     <span class="btn btn-sm btn-outline-success">{{image.categories}}</span> <a
                         href="/location/{{image.location}}" class="btn btn-sm btn-outline-info">{{image.location}}</a>
                 </div>
+            </div>
                 <div class="modal-footer">
                     <input class="form-control input-lg" type="text"
                            value="{{image.image.url}}" id="{{image.id}}.url">
