--- a/images/templates/navbar.html
+++ b/images/templates/navbar.html
@@ -1,32 +1,24 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
-<body>
-<nav class="navbar navbar-inverse">
+<nav class="navbar navbar-dark bg-danger ">
   <div class="container-fluid">
     <div class="navbar-header">
       <a class="navbar-brand" href="{% url 'all-images' %}">Gallery</a>
+    
     </div>
-  </div>
-  <!-- Adding a search form  -->
-  <div class="col-sm-4 col-md-4 navbar-right">
 
-    <form class="navbar-form" role="search" action="{% url 'search_results' %}">
+    <!-- Adding a search form  -->
+    <div class="col-sm-4 col-md-4 navbar-right">
 
-      <div class="input-group">
-        <input type="text" class="form-control" placeholder="Search Category" name="image">
-        <div class="input-group-btn">
-          <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+      <form class="navbar-form" role="search" action="{% url 'search_results' %}">
+
+        <div class="input-group">
+          <input type="text" class="form-control" placeholder="Search Category" name="image">
+          <div class="input-group-btn">
+            <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+          </div>
         </div>
-      </div>
 
-    </form>
+      </form>
+    </div>
+    <!-- search form end -->
   </div>
-  <!-- search form end -->
 </nav>
-</body>
-</html>
