--- a/static/css/base.css
+++ b/static/css/base.css
@@ -9,5 +9,5 @@ body{
   background-image: url(https://cdn.shopify.com/s/files/1/0337/7469/products/sweet-pink-ombre-wallpaper-mural_1800x1800.jpg?v=1596397295);
 }
 nav{
-  background-color: #B33F62;
+  background-color: #f53ec7;
 }
