--- a/images/templates/search.html
+++ b/images/templates/search.html
@@ -14,13 +14,41 @@
 
   {% if searched_images %}
     {% for image in searched_images %}
-    <div class="col-sm-6 col-md-3">
-    <h1>{{image.categories}}</h1>
-    <img src="{{image.image.url}}" alt="Image">
-    <p><b>{{image.name}}</b></p>
-    <b><p>{{image.description}}</p></b>
-    <br>
+    <div class="row">  
+      <div class="col-xs-18 col-sm-6 col-md-3 ">
+  <div class="card" data-toggle="modal" data-target="#{{image.id}}">
+      
+      <img src="{{image.image.url}}" alt="{{image.name}}" class="card-img" width="300px">
+      <h2>Name:{{image.name}}</h2>
+      <p><b>Description:{{image.description}}</b></p>
+  </div>
+  <div class="modal fade " id="{{image.id}}" tabindex="-1" role="dialog"
+       aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered modal-md" role="document">
+          <div class="modal-content modalcard">
+              <div class="modal-header">
+                  <h5 class="modal-title" id="imageheader">{{image.name}}</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                  </button>
+              </div>
+              <div class="modal-body">
+                  <img src="{{image.image.url}}" alt="{{image.name}}" class="img-fluid" width="400">
+                  <p class="imgdesc text-center">{{image.description}}</p>
+                  <span class="btn btn-sm btn-outline-success">{{image.categories}}</span> <a
+                      href="/location/{{image.location}}" class="btn btn-sm btn-outline-info">{{image.location}}</a>
+              </div>
+          </div>
+              <div class="modal-footer">
+                  <input class="form-control input-lg" type="text"
+                         value="{{image.image.url}}" id="{{image.id}}.url">
+                  <button class="btn btn-success btn-sm" onclick="copyLink('{{image.id}}.url')">Copy</button>
+                  <button type="button" class="btn btn-outline-danger btn-sm" data-dismiss="modal">Close
+                  </button>
+              </div>
+          </div>
       </div>
+  </div>
     {% endfor %}
   {% endif %}
   </div>
