--- a/images/templates/all-images.html
+++ b/images/templates/all-images.html
@@ -8,8 +8,8 @@
  <div class="card-columns">
     {% for image in images %}
     <div class="row"> 
-        <div class="col-xs-18 col-sm-6 col-md-6 ">
-    <div class="card" data-toggle="modal" data-target="#{{image.id}}">
+        <div class="col-xs-16 col-sm-6 col-md-6 ">
+    <div class="card" data-toggle="modal" data-target="#{{image.id}}"style="width:300px; height: 300px;">
         
         <img src="{{image.image.url}}" alt="{{image.name}}" class="card-img" width="300px">
         <h2>Name:{{image.name}}</h2>
